--- a/recipe.html
+++ b/recipe.html
@@ -13,9 +13,8 @@
       <img src="https://assets.epicurious.com/photos/5b565307a41af20b8c167e18/6:4/w_620%2Ch_413/Grilled-Chicken-Salad-with-Romesco-recipe-120720-jpg" 
       alt="Grilled Chicken Salad with Romesco">
       <p class="credit"> Source: <a href="https://www.epicurious.com/recipes/food/views/grilled-chicken-salad-with-romesco-sauce" target="_blank">Epicurious.com </a></p>
-    
       <p id="description">Purée grilled bell peppers, almond butter, sherry vinegar, and garlic into an irresistibly smoky-sweet sauce that's great served with a crunchy grilled chicken salad.</p>
-      <div id="yield">
+    <div id="yield">
         <dl>
          <dt>Yield:</dt>
          <dd>4 servings</dd>
@@ -27,28 +26,26 @@
       </div>
       <div id="ingredients">
        <h2>Ingredients</h2>
-         <h3>For the Chicken:</h3>
-            <ul>
-             <il>1 lb. skinless, boneless chicken thighs</il>
-             <il>1 tsp. kosher salt</il>
-             <il>3 Tbsp. sherry vinegar or red wine vinegar</il>
-             <il>2 garlic cloves, finely grated</il>
-             <il>Vegetable oil (for grill)</il>
-            </ul>
-         <h3>For the Romesco:</h3>
-            <ul>
-             <li>Vegetable oil (for grill)</li>
-             <li>2 large red bell peppers</li>
-             <li>1 garlic clove, finely grated</li>
-             <li>2 Tbsp. sherry vinegar or red wine vinegar</li>
-             <li>2 Tbsp. unsweetened almond butter</li>
-             <li>1 Tbsp. extra-virgin olive oil</li>
-             <li>1 1/4 tsp. kosher salt</li>
-             <li>1/4 tsp. cayenne pepper</li>
-            </ul>
-        <h3>
-            For the Salad:
-        </h3>
+       <h3>For the Chicken:</h3>
+        <ul>
+            <il>1 lb. skinless, boneless chicken thighs</il>
+            <il>1 tsp. kosher salt</il>
+            <il>3 Tbsp. sherry vinegar or red wine vinegar</il>
+            <il>2 garlic cloves, finely grated</il>
+            <il>Vegetable oil (for grill)</il>
+        </ul>
+       <h3>For the Romesco:</h3>
+        <ul>
+            <li>Vegetable oil (for grill)</li>
+            <li>2 large red bell peppers</li>
+            <li>1 garlic clove, finely grated</li>
+            <li>2 Tbsp. sherry vinegar or red wine vinegar</li>
+            <li>2 Tbsp. unsweetened almond butter</li>
+            <li>1 Tbsp. extra-virgin olive oil</li>
+            <li>1 1/4 tsp. kosher salt</li>
+            <li>1/4 tsp. cayenne pepper</li>
+        </ul>
+       <h3>For the Salad:</h3>
         <ul>
             <il>3 small heads of Little Gem lettuce, leaves separated, or 1 romaine heart, cut into 2" pieces</il>
             <il>2 mini seedless cucumbers, halved lengthwise, sliced into half moons</il>
